[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merkletools"
version = "0.0.2"
description = "A module for Merkle Tries and proofs."
authors = [{name = "Nynra", email="nynradev@pm.me"}]
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pysha3", 'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["src"]